# Markd-AI

./: .gitignore  README.md  pyproject.toml  requirements.txt
markdai/: core.py
markdai.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
scripts/: publish.py
